<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/splash_screen"
              >

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/pinkorangetransperant"
            android:visibility="gone"
            android:id="@+id/loginForm"
            >
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:id="@+id/signUpLabel"
                    android:layout_gravity="center"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    android:text="@string/signUp"/>
            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:hint="@string/email"
                    android:inputType="text"/>
            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:password="true"/>
            <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/login"
                    android:visibility="gone"
                    android:textSize="20sp"
                    android:textColor="@color/green"
                    android:text="@string/signIn"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/skip"
                  android:layout_gravity="center"
                  android:textColor="@color/orange_darker"
                  android:text="@string/skip"/>
            <ProgressBar android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/progressBar"/>
    </LinearLayout>
    <ProgressBar android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:id="@+id/progressBar2"
                 android:layout_alignParentBottom="true"
                 android:indeterminate="true"
            />
</RelativeLayout>