<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_height="fill_parent" android:layout_width="match_parent"
                xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/white">
    <ScrollView android:layout_height="fill_parent" android:layout_width="match_parent"
                android:layout_above="@+id/bottom"
                android:id="@+id/scrollView">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                    android:orientation="horizontal">
                <ToggleButton android:layout_width="fill_parent" android:layout_height="wrap_content"
                              android:id="@+id/averageSize"
                              android:layout_weight="1"
                              android:background="@drawable/btn_toggle"
                              android:textOn="@string/baseSizeSmall"
                              android:textOff="@string/baseSizeSmall"
                              android:text="@string/baseSizeSmall"/>
                <ToggleButton android:layout_width="fill_parent" android:layout_height="wrap_content"
                              android:id="@+id/largeSize"
                              android:layout_weight="1"
                              android:background="@drawable/btn_toggle"
                              android:text="@string/baseSizeBig"
                              android:textOn="@string/baseSizeBig"
                              android:textOff="@string/baseSizeBig"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:id="@+id/constructor"
                    />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_alignParentBottom="true"
                  android:layout_margin="5dp"
                  android:id="@+id/bottom">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:id="@+id/sumLabel"
                      android:text="@string/sumForConstr"
                      android:gravity="center"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:id="@+id/total"
                      android:layout_below="@+id/sumLabel"
                      android:textStyle="bold"
                      android:gravity="center"
                    />
        </RelativeLayout>
        <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/placeOrder"
                android:text="@string/placeOrder"
                />
    </LinearLayout>
</RelativeLayout>

