<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="wrap_content" android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:id="@+id/deliveryAddress"
                  android:gravity="center"
                  android:layout_marginTop="5dp"
                  android:textStyle="bold"
                  android:textSize="25sp"
                android:text="@string/information"/>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:background="@drawable/lines">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:id="@+id/pickUpPlace"
                      android:layout_marginLeft="20dp"/>
            <AutoCompleteTextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:id="@+id/pickUp"/>
        </LinearLayout>

        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:id="@+id/contactInformation"
                android:text="@string/contactInfo"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="15sp"/>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:id="@+id/emailId"
                      android:background="@drawable/lines"
                      >
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:id="@+id/emailName"
                      android:layout_marginLeft="20dp"/>
            <EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:id="@+id/email"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:background="@drawable/lines">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:id="@+id/phoneNumberName"
                      android:layout_marginLeft="20dp"/>
            <EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:id="@+id/phoneNumber"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <ToggleButton android:layout_width="fill_parent" android:layout_height="fill_parent"
                    android:id="@+id/in15min"
                    android:layout_weight="1"
                    android:background="@drawable/btn_toggle"
                    android:text="@string/in15minutes"
                    android:textOn="@string/in15minutes"
                    android:textOff="@string/in15minutes"/>
            <ToggleButton android:layout_width="fill_parent" android:layout_height="fill_parent"
                    android:id="@+id/otherTime"
                    android:layout_weight="1"
                    android:background="@drawable/btn_toggle"
                    android:text="@string/otherTime"
                    android:textOn="@string/otherTime"
                    android:textOff="@string/otherTime"/>
        </LinearLayout>
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/commentTitle"
                  android:textSize="15sp"
                  android:gravity="center"
                  android:textStyle="bold"
                android:text="@string/comment"/>
        <EditText android:layout_width="fill_parent" android:layout_height="100dp"
                  android:id="@+id/comment"
                />
        <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:id="@+id/submitOrder"/>
    </LinearLayout>
</ScrollView>